test/libsolidity/syntaxTests/nameAndTypeResolution/016_assignment_to_mapping.sol
contract test {
    struct str {
        mapping(uint=>uint) map;
    }
    str data;
    function fun() public {
        mapping(uint=>uint) storage a = data.map;
        data.map = a;
    }
}
// ----
// TypeError: (172-184): Mappings cannot be assigned to.
